[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latexdssite"
description = "Site for LaTeXDS"
readme = "README.md"
version = "v1.1.0"
dependencies = [
    "uvicorn==0.30.5",
    "fastapi==0.112.0",
]
authors = [{name = "Nakidai", email = "plaza521@inbox.ru"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
latexdssite = "latexdssite:main"
